======================
lovely.jsonrpc changes
======================

trunk
=====

- INCOMPATIBLE CHANGE: constructor of wsgi application now takes a
  dict with dispatchers in the constructor for defining multiple
  entry-points.

2009/06/16 0.0.1:
=================

- added timeout support (usage requires python-2.6 OR appengine SDK which
                         supports HTTP(S)Connection timeouts under
                         python-2.5 as well)
- removed GAETransport (not longer required since GAE emulates httplib)

2009/06/09 0.0.1a5:
===================

- implemented compatibily mode for JSONRPC v1.0 which requires
  an id in post requests. for details see
  http://json-rpc.org/wd/JSON-RPC-1-1-WD-20060807.html#PostProcedureCall

2009/04/07 0.0.1a4:
===================

- send an empty list as params if no params are given in proxy, this
  is not required by the spec but in some server side implementations

2009/01/23 0.0.1a3:
===================

- Added a transport for the client proxy that uses the urlfetch module
  of google appengine. This can be used to do make rpc calls from an
  appengine app.

2008/12/15 0.0.1a2:
===================

- session handling added


2008/12/08 0.0.1a1:
===================

Note: This was an internal release.

- initial release